--- a/src/main/resources/templates/userinfo.html
+++ b/src/main/resources/templates/userinfo.html
@@ -14,6 +14,13 @@
             <span style="font-weight:bold" th:text="${userAttribute.key}"></span>: <span th:text="${userAttribute.value}"></span>
         </li>
     </ul>
+    <span th:object="${tcblUser}">
+        <ul>
+            <li>
+                <span style="font-weight:bold">Username:</span><span th:text="${tcblUser.userName}"></span>
+            </li>
+        </ul>
+    </span>
 </div>
 </body>
 </html>
