--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Spring Security - OAuth 2.0 Login</title>
     <meta charset="utf-8" />
 </head>
 <body>
-<div style="float: right" th:fragment="logout" sec:authorize="isAuthenticated()">
+
+<!-- render this if the user is logged in -->
+<!--div style="float: right" th:fragment="logout" sec:authorize="isAuthenticated()">
     <div style="float:left">
         <span style="font-weight:bold">User: </span><span sec:authentication="name"></span>
     </div>
@@ -15,15 +17,21 @@
             <input type="submit" value="Logout" />
         </form>
     </div>
-</div>
-<h1>OAuth 2.0 Login with Spring Security</h1>
+</div-->
+<!-- *** -->
+
+<h1>TCBL User  Manager</h1>
 <div>
-    You are successfully logged in <span style="font-weight:bold" th:text="${userName}"></span>
-    via the OAuth 2.0 Client <span style="font-weight:bold" th:text="${clientName}"></span>
+    Welcome to the fantastic TCBL User Management application!
+<!--    You are successfully logged in <span style="font-weight:bold" th:text="${userName}"></span>
+    via the OAuth 2.0 Client <span style="font-weight:bold" th:text="${clientName}"></span> -->
 </div>
 <div>&nbsp;</div>
 <div>
     <a href="/userinfo" th:href="@{/userinfo}">Display User Info</a>
+</div>
+<div>
+    <a href="/user/index" th:href="@{/user/index}">Manage your info</a>
 </div>
 </body>
 </html>
