Finally got the basics of logging in working.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <title>Spring Security - OAuth 2.0 Login</title>
     <meta charset="utf-8" />
@@ -28,14 +28,11 @@
 </div>
 <div>&nbsp;</div>
 
-<!--div>
-    <a href="/userinfo" th:href="@{/userinfo}">Display User Info</a>
-</div-->
-<div>
+<div sec:authorize="hasRole('ROLE_ANONYMOUS')">
     <a href="/optekenen" th:href="@{/optekenen}">Optekenen</a>
 </div>
 
-<div>
+<div sec:authorize="isAuthenticated()">
     <a href="/user/index" th:href="@{/user/index}">Manage your info</a>
 </div>
 </body>
