--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,7 +29,7 @@
 <div>&nbsp;</div>
 
 <div sec:authorize="hasRole('ROLE_ANONYMOUS')">
-    <a href="/optekenen" th:href="@{/optekenen}">Optekenen</a>
+    <a href="/oiclogin" th:href="@{/oiclogin}">Log in with TCBL</a>
 </div>
 
 <div sec:authorize="isAuthenticated()">
