--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>TCBL User Manager</title>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="/static/css/main.css" th:href="@{/css/tcbl.css}" />
 </head>
 <body>
 
