--- a/src/main/resources/templates/userinfo.html
+++ b/src/main/resources/templates/userinfo.html
@@ -3,6 +3,7 @@
 <head>
     <title>Spring Security - OAuth 2.0 User Info</title>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="/static/css/main.css" th:href="@{/css/tcbl.css}" />
 </head>
 <body>
 <!--div th:substituteby="index::logout"></div-->
