--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>TCBL User Manager</title>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="/static/css/main.css" th:href="@{/css/tcbl.css}" />
+<head th:substituteby="index :: head">
 </head>
 <body>
-<!--div th:substituteby="index::logout"></div-->
 <h1>Your information</h1>
 <form action="#" th:action="@{/user/update}" th:object="${tcblUser}" method="post">
      <label for="firstName">First name</label>
