--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>TCBL User Manager</title>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="/static/css/main.css" th:href="@{/css/tcbl.css}" />
-</head>
+<head th:substituteby="index :: head">
 <body>
 <!--div th:substituteby="index::logout"></div-->
 <h1>Your information</h1>
