--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -1,20 +1,33 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head th:substituteby="index :: head">
+<head th:replace="index :: head">
 <body>
+
 <!--div th:substituteby="index::logout"></div-->
 <h1>Your information</h1>
-<form action="#" th:action="@{/user/register}" th:object="${tcblUser}" method="post">
+<p>All fieds are required.</p>
+<form action="#" th:action="@{/user/register}" th:object="${tcblUser}" method="post" name="regForm" onsubmit="return validateForm()">
     <label for="firstName">First name</label>
-    <input type="text" th:field="*{firstName}"/><br>
+    <input type="text" th:field="*{firstName}" required/><br>
     <label for="lastName">Last name</label>
-    <input type="text" th:field="*{lastName}"/><br>
+    <input type="text" th:field="*{lastName}" required/><br>
     <label for="lastName">E-mail</label>
-    <input type="text" th:field="*{userName}"/><br>
+    <input type="email" th:field="*{userName}" required/><br>
     <label for="lastName">password</label>
-    <input type="text" th:field="*{password}"/><br>
-    <input type="submit" value="Create"/>
+    <input type="password" th:field="*{password}" required/><br>
+    <input type="password" id="cpassword" name="cpassword" value="" required/><br>
+    <input type="submit" value="Register"/>
 </form>
 <p><a href="/index" th:href="@{/index}">Back to home page</a></p>
+<script>
+    function validateForm() {
+        var p1 = document.forms["regForm"]["password"].value;
+        var p2 = document.forms["regForm"]["cpassword"].value;
+        if (p1 !== p2) {
+            alert("Passwords do not match.");
+            return false;
+        }
+    }
+</script>
 </body>
 </html>
