--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -4,18 +4,28 @@
 <body>
 
 <!--div th:substituteby="index::logout"></div-->
-<h1>Your information</h1>
+<h1>Sign up to TCBL</h1>
 <p>All fieds are required.</p>
 <form action="#" th:action="@{/user/register}" th:object="${tcblUser}" method="post" name="regForm" onsubmit="return validateForm()">
-    <label for="firstName">First name</label>
-    <input type="text" th:field="*{firstName}" required/><br>
-    <label for="lastName">Last name</label>
-    <input type="text" th:field="*{lastName}" required/><br>
-    <label for="lastName">E-mail</label>
-    <input type="email" th:field="*{userName}" required/><br>
-    <label for="lastName">password</label>
-    <input type="password" th:field="*{password}" required/><br>
-    <input type="password" id="cpassword" name="cpassword" value="" required/><br>
+    <fieldset>
+        <legend>Login details</legend>
+        <label for="userName">E-mail</label>
+        <input type="email" th:field="*{userName}" required/>
+        <label for="password">password</label>
+        <input type="password" th:field="*{password}" required/>
+        <label for="cpassword">Confirm Password</label>
+        <input type="password" id="cpassword" name="cpassword" value="" required/>
+    </fieldset>
+
+    <fieldset>
+        <legend>Personal information</legend>
+        <label for="firstName">First name</label>
+        <input type="text" th:field="*{firstName}" required/>
+        <label for="lastName">Last name</label>
+        <input type="text" th:field="*{lastName}" required/>
+    </fieldset>
+
+
     <input type="submit" value="Register"/>
 </form>
 <p><a href="/index" th:href="@{/index}">Back to home page</a></p>
