--- a/src/main/resources/static/css/tcbl.css
+++ b/src/main/resources/static/css/tcbl.css
@@ -7,21 +7,28 @@ body {
     font-family: raleway;
 }
 
+h1 {
+    font-weight: bold;
+    font-size: 1.5em !important;
+    line-height: 1.2 !important;
+    color: #222222;
+}
+
 form {  /* set width in form, not fieldset (still takes up more room w/ fieldset width */
-    margin: 0;
+/*    margin: 0;
     padding: 0;
     min-width: 500px;
     max-width: 600px;
-    width: 560px;
+    width: 560px;*/
 }
 
 form fieldset {
 /* clear: both; note that this clear causes inputs to break to left in ie5.x mac, commented out */
-    border-color: #000;
+    border-color: #DDDDDD;
     border-width: 1px;
     border-style: solid;
-    padding: 10px;        /* padding in fieldset support spotty in IE */
-    margin: 0;
+    padding: 20px;        /* padding in fieldset support spotty in IE */
+    margin: 20px;
 }
 
 form fieldset legend {
@@ -30,12 +37,14 @@ form fieldset legend {
 }
 
 form label {
-    display: block;  /* block float the labels to left column, set a width */
-    float: left;
-    width: 150px;
-    padding: 0;
-    margin: 5px 0 0; /* set top margin same as form input - textarea etc. elements */
-    text-align: right;
+    font-size: 0.8em;
+    padding-bottom: 10px;
+    color: #4d4d4d;
+    cursor: pointer;
+    display: block;
+    font-weight: normal;
+    line-height: 1.5;
+    margin-bottom: 0;
 }
 
 form fieldset label:first-letter { /* use first-letter pseudo-class to underline accesskey, note that */
@@ -47,10 +56,23 @@ form fieldset label:first-letter { /* use first-letter pseudo-class to underline
 }
 
 form input, form textarea {
-    /* display: inline; inline display must not be set or will hide submit buttons in IE 5x mac */
-    width:auto;      /* set width of form elements to auto-size, otherwise watch for wrap on resize */
-    margin:5px 0 0 10px; /* set margin on left of form elements rather than right of
-                              label aligns textarea better in IE */
+    margin-bottom: 0;
+    margin-right: 1em;
+    border-radius: 0;
+    background-color: #FFFFFF;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #cccccc;
+    box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+    color: #444444;
+    display: block;
+    font-family: inherit;
+    font-size: 1rem;
+    height: 2.4375rem;
+    padding: 0.5rem;
+    width: 100%;
+    box-sizing: border-box;
+    transition: border-color 0.15s linear, background 0.15s linear;
 }
 
 form input#reset {
@@ -60,10 +82,10 @@ form input#reset {
 textarea { overflow: auto; }
 
 form small {
-    display: block;
+/*    display: block;
     margin: 0 0 5px 160px; /* instructions/comments left margin set to align w/ right column inputs */
-    padding: 1px 3px;
-    font-size: 88%;
+/*    padding: 1px 3px;
+    font-size: 88%;*/
 }
 
 form .required{font-weight:bold;} /* uses class instead of div, more efficient */
