--- a/src/main/resources/static/css/tcbl.css
+++ b/src/main/resources/static/css/tcbl.css
@@ -7,6 +7,13 @@ body {
     font-family: raleway;
 }
 
+.row {
+    padding-top: 10px;
+    margin: 0 auto;
+    max-width: 62.5rem;
+    width: 100%;
+}
+
 h1 {
     font-weight: bold;
     font-size: 1.5em !important;
