--- a/src/main/resources/static/css/tcbl.css
+++ b/src/main/resources/static/css/tcbl.css
@@ -73,7 +73,7 @@ form fieldset legend {
 }
 
 form label {
-    font-size: 0.8em;
+    /*font-size: 0.8em;*/
     padding-bottom: 10px;
     color: #4d4d4d;
     cursor: pointer;
@@ -128,4 +128,27 @@ form .required{font-weight:bold;} /* uses class instead of div, more efficient *
 
 form br {
     clear:left; /* setting clear on inputs didn't work consistently, so brs added for degrade */
+}
+
+
+.red-button {
+    margin: 2em;
+    background-color: #F190A0;
+    color: #000000;
+    box-shadow: none !important;
+    text-transform: uppercase;
+    font-weight: bold;
+    border: none;
+    border-radius: 4px;
+    display: inline-block;
+    width: auto;
+}
+
+.red-button:hover, .red-button:focus {
+    color: #FFFFFF;
+    background-color: #e84c65;
+}
+
+.smallFont {
+    font-size: 0.8em;
 }
