--- a/src/main/resources/static/css/tcbl.css
+++ b/src/main/resources/static/css/tcbl.css
@@ -152,3 +152,10 @@ form br {
 .smallFont {
     font-size: 0.8em;
 }
+
+.tcbl-footer {
+    font-size: 0.7rem;
+    color: #999;
+    position: relative;
+    bottom: 0;
+}
