--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 <head th:fragment="head">
     <title>TCBL User Manager</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="/static/css/main.css" th:href="@{/css/tcbl.css}" />
+    <link rel="stylesheet" th:href="@{/css/tcbl.css}" />
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -48,5 +48,11 @@
 <div sec:authorize="isAuthenticated()">
     <a href="/user/index" th:href="@{/user/index}">Manage your info</a>
 </div>
+
+<div class="tcbl-footer row" th:fragment="footer">
+    <p>This project has received funding from the European Union's Horizon 2020 Programme for research, technology development, and innovation under grant Agreement n.646133</p>
+    <img th:src="@{/assets/euh2020.png}">
+</div>
+
 </body>
 </html>
