--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -47,6 +47,9 @@
     </form>
     <!--<p><a href="/index" th:href="@{/index}">Back to home page</a></p>-->
 </div>
+
+<div th:replace="index :: footer">
+
 <script>
     function validateForm() {
         var p1 = document.forms["regForm"]["password"].value;
