added a "registered" page.

--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -48,7 +48,7 @@
     <!--<p><a href="/index" th:href="@{/index}">Back to home page</a></p>-->
 </div>
 
-<div th:replace="index :: footer">
+<div th:replace="index :: footer"/>
 
 <script>
     function validateForm() {
