--- a/src/main/resources/templates/user/confirmed.html
+++ b/src/main/resources/templates/user/confirmed.html
@@ -7,7 +7,7 @@
 <div th:if="${message} != null" class="row">
     <h1>Registration failed</h1>
     <p>We are sorry to tell you that the registration process failed.
-        Please <a th:href="@{/user/register}">try again</a>.
+        Please <a class="normal" th:href="@{/user/register}">try again</a>.
 </div>
 
 <!-- if successful -->
