Added "confirm password" to reset password flow.

--- a/src/main/resources/templates/user/passwordset.html
+++ b/src/main/resources/templates/user/passwordset.html
@@ -10,7 +10,7 @@
 </div>
 
 <!-- if successful -->
-<div th:unless="${message} != null">
+<div th:unless="${message} != null" class="row">
     <h1>Password successfully set!</h1>
     <p>You are successfully registered. You can now log in with your new password to the following TCBL services or Associated Service
         Providers:</p>
