--- a/src/main/resources/templates/user/passwordset.html
+++ b/src/main/resources/templates/user/passwordset.html
@@ -5,6 +5,7 @@
 
 <!-- if registration failed -->
 <div th:if="${message} != null" class="row">
+    <img src="@{/assets/TCBLAltsm.png}">
     <h1>Resetting password failed</h1>
     <p>We are sorry to tell you that setting your password failed. Please <a class="normal" th:href="@{/user/resetpw}">try again</a>.
 </div>
