--- a/src/main/resources/templates/user/resetpw.html
+++ b/src/main/resources/templates/user/resetpw.html
@@ -4,6 +4,7 @@
 <body>
 
 <div class="row">
+    <img th:src="@{/assets/TCBLAltsm.png}">
     <h1>Reset Password</h1>
     <p>Forgot your password? No problem.</p>
     <form action="#" th:action="@{/user/resetpw}" method="post" name="resetPwForm">
