--- a/src/main/resources/static/css/tcbl.css
+++ b/src/main/resources/static/css/tcbl.css
@@ -45,10 +45,17 @@ ul {
 
 .large-3 {
     width: 30%;
+    min-width: 250px;
 }
 
 .large-2 {
     width: 45%;
+    min-width: 250px;
+}
+
+.break {
+    width: 100%;
+    height: 50px;
 }
 
 
@@ -57,7 +64,6 @@ ul {
     padding-left: 0.9375rem;
     padding-right: 0.9375rem;
     float: left;
-    min-width: 250px;
 }
 
 
