--- a/src/main/resources/templates/user/passwordset.html
+++ b/src/main/resources/templates/user/passwordset.html
@@ -1,26 +1,36 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="index :: head">
+<head th:replace="fragments :: head">
 <body>
 
-<!-- if registration failed -->
-<div th:if="${message} != null" class="row">
-    <img src="@{/assets/TCBLAltsm.png}">
-    <h1>Resetting password failed</h1>
-    <p>We are sorry to tell you that setting your password failed. Please <a class="normal" th:href="@{/user/resetpw}">try again</a>.
+<!-- if password reset failed -->
+<div th:if="${message} != null">
+    <div th:replace="fragments :: header( ~{::h1}, ~{::aside})">
+        <h1>Resetting password failed</h1>
+        <aside>
+            <p>
+                <br>We are sorry to tell you that setting your password failed. Please <a class="normal"
+                                                                                          th:href="@{/user/resetpw}">try
+                again</a>.
+            </p>
+        </aside>
+    </div>
 </div>
 
 <!-- if successful -->
-<div th:unless="${message} != null" class="row">
-    <h1>Password successfully set!</h1>
-    <p>You are successfully registered. You can now log in with your new password to the following TCBL services or Associated Service
-        Providers:</p>
-    <ul>
-        <li><a href="http://tcbl.ditf-mr.de/">TCBL website</a></li>
-        <li><a href="http://labs.tcbl.eu/">TCBL Labs</a></li>
-    </ul>
+<div th:unless="${message} != null">
+    <div th:replace="fragments :: header( ~{::h2}, ~{::main})">
+        <h2>Password successfully set!</h2>
+        <main>
+            <p><br>Your new password is set. You can now log in to the following TCBL
+                services or Associated Service Providers:</p>
+            <ul>
+                <li><a href="http://tcbl.ditf-mr.de/">TCBL website</a></li>
+                <li><a href="http://labs.tcbl.eu/">TCBL Labs</a></li>
+            </ul>
+        </main>
+    </div>
 </div>
 
-<div th:replace="index :: footer"/>
 </body>
 </html>
