--- a/src/main/resources/templates/user/resetpw.html
+++ b/src/main/resources/templates/user/resetpw.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="index :: head">
+<head th:replace="fragments :: head">
 <body>
 
-<div class="row">
-    <img th:src="@{/assets/TCBLAltsm.png}">
+<div th:replace="fragments :: header( ~{::h1}, ~{::main})">
     <h1>Reset Password</h1>
-    <p>Forgot your password? No problem.</p>
-    <form action="#" th:action="@{/user/resetpw}" method="post" name="resetPwForm">
+    <main>
+        <p>Forgot your password? No problem.</p>
+        <form action="#" th:action="@{/user/resetpw}" method="post" name="resetPwForm">
             <div class="row">
                 <div class="columns large-3">
                     <label for="mail">E-mail</label>
                     <input type="email" name="mail" id="mail" required/>
                 </div>
             </div>
-        <input type="submit" value="Reset password" class="red-button"/>
-    </form>
+            <input type="submit" value="Reset password" class="red-button"/>
+        </form>
+    </main>
 </div>
 
-<div th:replace="index :: footer"/>
 </body>
 </html>
