--- a/src/main/resources/templates/user/resetpwform.html
+++ b/src/main/resources/templates/user/resetpwform.html
@@ -1,38 +1,32 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="index :: head">
+<head th:replace="fragments :: head">
 <body>
 
-<div class="row" th:if="${rpc} != null">
-    <h1>Reset Password</h1>
-    <form action="#" th:action="@{/user/resetpwform}" method="post" name="resetPwForm" onsubmit="return validateForm()">
-        <div class="row">
-            <div class="columns large-3">
-                <label for="password">New password</label>
-                <input type="password" name="password" id="password" required/>
-            </div>
-            <div class="columns large-3">
-                <label for="password">Confirm new password</label>
-                <input type="password" name="cpassword" id="cpassword" required/>
-            </div>
-            <input type="hidden" th:value="${rpc}" name="rpc" id="rpc"/>
-        </div>
-        <input type="submit" value="Set password" class="red-button"/>
-    </form>
+<div th:if="${rpc} != null">
+    <div th:replace="fragments :: header( ~{::h1}, ~{::main})">
+        <h1>Reset Password</h1>
+        <main><br>
+            <form action="#" th:action="@{/user/resetpwform}" method="post" name="regForm"
+                  onsubmit="return validatePassword()">
+                <div class="row">
+                    <div class="columns large-3">
+                        <label for="password">New password</label>
+                        <input type="password" name="password" id="password" required/>
+                    </div>
+                    <div class="columns large-3">
+                        <label for="password">Confirm new password</label>
+                        <input type="password" name="cpassword" id="cpassword" required/>
+                    </div>
+                    <input type="hidden" th:value="${rpc}" name="rpc" id="rpc"/>
+                </div>
+                <input type="submit" value="Set password" class="red-button"/>
+            </form>
+        </main>
+    </div>
 </div>
 
-<div th:replace="index :: footer"/>
-
-<script>
-    function validateForm() {
-        var p1 = document.forms["resetPwForm"]["password"].value;
-        var p2 = document.forms["resetPwForm"]["cpassword"].value;
-        if (p1 !== p2) {
-            alert("Passwords do not match.");
-            return false;
-        }
-    }
-</script>
+<script th:replace="fragments :: validatePassword"></script>
 
 </body>
 </html>
