Does not work well from jar. Try change paths.

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -27,7 +27,7 @@ the other templates.
 
     <!-- common heading -->
     <div class="columns">
-        <img th:src="@{/assets/TCBLAltsm.png}">
+        <img th:src="@{assets/TCBLAltsm.png}">
     </div>
     <div class="columns">
         <h1 th:replace="${title}">Hello</h1>
@@ -43,7 +43,7 @@ the other templates.
             <p>This project has received funding from the European Union's Horizon 2020 Programme for research, technology development, and innovation under grant Agreement n.646133</p>
         </div>
         <div class="columns">
-            <img th:src="@{/assets/euh2020.png}">
+            <img th:src="@{assets/euh2020.png}">
         </div>
     </div>
 </div>
