Fix template paths for jarred version. See https://github.com/spring-projects/spring-boot/issues/1744.

--- a/src/main/resources/templates/user/passwordset.html
+++ b/src/main/resources/templates/user/passwordset.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments :: head">
+<head th:replace="/fragments :: head">
 <body>
 
 <!-- if password reset failed -->
 <div th:if="${message} != null">
-    <div th:replace="fragments :: header( ~{::h1}, ~{::aside})">
+    <div th:replace="/fragments :: header( ~{::h1}, ~{::aside})">
         <h1>Resetting password failed</h1>
         <aside>
             <p>
@@ -19,7 +19,7 @@
 
 <!-- if successful -->
 <div th:unless="${message} != null">
-    <div th:replace="fragments :: header( ~{::h2}, ~{::main})">
+    <div th:replace="/fragments :: header( ~{::h2}, ~{::main})">
         <h2>Password successfully set!</h2>
         <main>
             <p><br>Your new password is set. You can now log in to the following TCBL
