--- a/src/main/resources/templates/user/registered.html
+++ b/src/main/resources/templates/user/registered.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments :: head">
+<head th:replace="/fragments :: head">
 <body>
 
 <!-- if registration failed -->
 <div th:if="${message} != null">
-    <div th:replace="fragments :: header( ~{::h1}, ~{::aside})">
+    <div th:replace="/fragments :: header( ~{::h1}, ~{::aside})">
         <h1>Registration failed</h1>
         <aside>
             <p><br>We are sorry to tell you that the registration process failed. This is the reason: </p>
@@ -17,7 +17,7 @@
 
 <!-- if successful -->
 <div th:unless="${message} != null">
-    <div th:replace="fragments :: header( ~{::h2}, ~{::main})">
+    <div th:replace="/fragments :: header( ~{::h2}, ~{::main})">
         <h2>Almost done!</h2>
         <main>
             <p><br>Your registration is almost completed. An e-mail with a confirmation link will be sent to you
