--- a/src/main/resources/templates/user/resetpw.html
+++ b/src/main/resources/templates/user/resetpw.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments :: head">
+<head th:replace="/fragments :: head">
 <body>
 
-<div th:replace="fragments :: header( ~{::h1}, ~{::main})">
+<div th:replace="/fragments :: header( ~{::h1}, ~{::main})">
     <h1>Reset Password</h1>
     <main>
         <p>Forgot your password? No problem.</p>
