--- a/src/main/resources/templates/user/resetpwform.html
+++ b/src/main/resources/templates/user/resetpwform.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments :: head">
+<head th:replace="/fragments :: head">
 <body>
 
 <div th:if="${rpc} != null">
-    <div th:replace="fragments :: header( ~{::h1}, ~{::main})">
+    <div th:replace="/fragments :: header( ~{::h1}, ~{::main})">
         <h1>Reset Password</h1>
         <main><br>
             <form action="#" th:action="@{/user/resetpwform}" method="post" name="regForm"
@@ -26,7 +26,7 @@
     </div>
 </div>
 
-<script th:replace="fragments :: validatePassword"></script>
+<script th:replace="/fragments :: validatePassword"></script>
 
 </body>
 </html>
