--- a/src/main/resources/static/css/tcbl.css
+++ b/src/main/resources/static/css/tcbl.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: raleway;
-    src: url('/css/Raleway-Regular.woff');
+    src: url('Raleway-Regular.woff');
 }
 
 a {
