--- a/src/main/resources/templates/user/pwmailsent.html
+++ b/src/main/resources/templates/user/pwmailsent.html
@@ -22,7 +22,7 @@
         <main>
             <p><br>An e-mail with a link to reset your password will be sent to you shortly.
                 The link is <b>only valid for one hour</b>, starting now.</p>
-            <p>If it doesn't arrive within one hour, please <a class="normal" th:href="@{/user/resetpw}">try again</a>.
+            <p>If it doesn't arrive within a few minutes, please check your spam folder or <a class="normal" th:href="@{/user/resetpw}">try again</a>.
             </p>
         </main>
     </div>
