--- a/src/main/resources/templates/user/registered.html
+++ b/src/main/resources/templates/user/registered.html
@@ -22,7 +22,7 @@
         <main>
             <p><br>Your registration is almost completed. An e-mail with a confirmation link will be sent to you
                 shortly.</p>
-            <p>If it doesn't arrive within one hour, please <a class="normal" th:href="@{/user/register}">try again</a>.
+            <p>If it doesn't arrive within a few minutes, please check your spam folder or <a class="normal" th:href="@{/user/register}">try again</a>.
             </p>
         </main>
     </div>
